--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -1,7 +1,7 @@
 body {
     background: #000;
-    font-family: monospace;
-    font-size: 14px;
+    font-family: "verdana";
+    font-size: 15px;
     color: #fff;
 }
 
@@ -10,8 +10,9 @@ body {
     width:200px;
 }
 
+
 .container .content {
-    width: 300px;
+    width: 500px;
     height: 400px;
     margin: auto;
     position: absolute;
@@ -22,11 +23,21 @@ body {
     text-align: center;
 }
 
+.container .content h2{
+    font-size:30px;
+    margin: 10px auto;
+}
+
+.container .content p{
+    margin: 10px 0;
+}
+
 .container .content .contactLinks {
-    margin: 0;
+    margin: 20px auto 0 auto;
     padding: 0;
     width: 400px;
     height: 20px;
+    font-size:16px;
 }
 
 .container .content .contactLinks li {
@@ -37,4 +48,10 @@ body {
 
 .container .content .contactLinks li a {
     color: #fff;
+}
+
+.container .content .aboutme{
+    text-align: left;
+    width:400px;
+    margin:30px auto;
 }
