--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -46,3 +46,16 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+/*
+    candasminareci.com
+*/
+a:link, a:visited, a:hover, a:active {
+    color: green;
+    font-size: inherit;
+    text-decoration: none;
+    transition: all .2s ease-in-out;
+}
+a:hover{
+    text-decoration:underline;
+    transform: scale(1.1);
+}
